<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/main_menu">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/ivUserPicture"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_account_circle"
                app:civ_border_color="@color/colorBackground"
                app:civ_border_width="1dp" />

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            app:layout_collapseMode="pin">

            <TextView
                android:id="@+id/tvPageTitle"
                style="@style/Headline3.PageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/services" />

            <EditText
                style="@style/RoundedGrey.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/search_services"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!--    <FrameLayout-->
    <!--        android:id="@+id/content"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:paddingBottom="70dp"-->
    <!--        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="70dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <fragment
            android:id="@+id/content"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="false"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:navGraph="@navigation/nav_graph" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/bottomTabMenu"
        style="@style/BottomNavigation.TabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/border_top">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/service_menu_icon"
            android:text="@string/services" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFeeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/service_normal"
            android:text="@string/feeds" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabApproval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/service_normal"
            android:text="@string/approvals" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/service_normal"
            android:text="@string/about" />

    </com.google.android.material.tabs.TabLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>